--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://preview.kasniaproject.us.kg/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Kasnia Project'
 
 [markup]
   [markup.goldmark]
