Se agrega página Novelas, aún no funciona, pero se agregó

--- a/hugo.toml
+++ b/hugo.toml
@@ -6,3 +6,10 @@ title = 'Kasnia Project'
   [markup.goldmark]
     [markup.goldmark.renderer]
       unsafe = true
+
+[outputFormats.novelasJSON]
+  mediaType = "application/json"
+  baseName = "novelas"
+  isPlainText = true
+  notAlternative = true
+  
