--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,5 @@
-baseURL = 'https://preview.kasniaproject.us.kg/'
-languageCode = 'en-us'
-title = 'Kasnia Project'
+languageCode = "es"
+title = "Kasnia Project"
 
 #Para poner html en markdown
 [markup]
