Se completa beast-tamer.md, se arreglan problemas de datos de la modal y se arregla problema en buscador

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,13 @@
 languageCode = "es"
 title = "Kasnia Project"
 
+#Para minificación de archivos
+[minify]
+  disableHTML = false
+  disableJSON = false
+  disableXML = false
+  disableSVG = false
+
 #Para poner html en markdown
 [markup]
   [markup.goldmark]
